@@ -165,6 +165,25 @@ Cache.prototype.remove = function(name) {
 	return value;
 };
 
+/*
+	Remove all
+	@search {String}
+	return {Number}
+*/
+Cache.prototype.removeAll = function(search) {
+	var self = this;
+	var count = 0;
+
+	Object.keys(self.repository).forEach(function(o) {
+		if (o.indexOf(search) !== -1) {
+			self.remove(o);
+			count++;
+		}
+	});
+	
+	return count;
+};
+
 // ======================================================
 // EXPORTS
 // ======================================================
